--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
+.main_css{
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.hidden{
+  display: none !important;
+}
+
+.no-interaction {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.news-paper{
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  top: 11%;
+  z-index: 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media screen and (min-width: 2000px) {
+
+}
+  @media screen and (max-width: 1600px) {
+
+  }
+    @media screen and (max-width: 1200px) {
+
+    }
+      @media screen and (max-width: 768px) {
+     
+        .news-paper{
+          width: 100%; /* Адаптивна ширина */
+          transform: scale(1.5) translateX(15%); /* Збільшуємо зображення на 150% і зміщуємо */
+          /* transform-origin: left center;  */
+          top: 12%;
 }
 
-.App-link {
-  color: #61dafb;
+      }
+      @media screen and (max-width: 450px) {
+     
+        .news-paper{
+          width: 100%; /* Адаптивна ширина */
+          transform: scale(1.5) translateX(15%); /* Збільшуємо зображення на 150% і зміщуємо */
+          /* transform-origin: left center;  */
+          top: 12.5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+      }
