--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,23 @@ body{
 }
 
 @media screen and (min-width: 2000px) {
-
+  .news-paper{
+    /* width: 100%;  */
+    /* transform: scale(1.5) translateX(15%); 
+    /* transform-origin: left center;  */
+    top: 10%;
+  }
 }
   @media screen and (max-width: 1600px) {
 
   }
-    @media screen and (max-width: 1200px) {
-
+    @media screen and (max-width: 1450px) {
+      .news-paper{
+        width: 100%; /* Адаптивна ширина */
+        transform: scale(1.5) translateX(15%); /* Збільшуємо зображення на 150% і зміщуємо */
+        /* transform-origin: left center;  */
+        top: 12%;
+      }
     }
       @media screen and (max-width: 768px) {
      
@@ -43,7 +53,7 @@ body{
           width: 100%; /* Адаптивна ширина */
           transform: scale(1.5) translateX(15%); /* Збільшуємо зображення на 150% і зміщуємо */
           /* transform-origin: left center;  */
-          top: 12%;
+          top: 12.5%;
 }
 
       }
