--- a/src/components/ButtonContactUs.css
+++ b/src/components/ButtonContactUs.css
@@ -62,8 +62,11 @@ text {
   @media screen and (max-width: 1600px) {
 
   }
-    @media screen and (max-width: 1200px) {
-
+    @media screen and (max-width: 1450px) {
+      .circle-container {
+        left: 5%;
+        margin-top: 10%;
+     }
     }
       @media screen and (max-width: 768px) {
         .circle-container {
