--- a/src/components/SectionTwo.css
+++ b/src/components/SectionTwo.css
@@ -17,7 +17,8 @@ position: absolute;
 display: grid;
 grid-template-rows: min-content max-content;
 gap: 50px;
-width: 1133px;
+width: 70vw;
+/* width: 1133px; */
 right: 5%;
 top: 5%;
 }
@@ -33,7 +34,8 @@ margin: 0;
 
 .description p:nth-child(1){
     font-family: 'Georama', sans-serif;
-    font-size: 18px;
+    /* font-size: 18px; */
+    font-size: 1vw;
     font-weight: 200;
     color: #CCCCCC;
     position: absolute;
@@ -42,7 +44,7 @@ margin: 0;
 }
 .description p:nth-child(2){
     font-family: 'Georama', sans-serif;
-    font-size: 4.25em;
+    font-size: 4.2vw;
     font-weight: 100;
     color: #CCCCCC;
     line-height: 1;
@@ -116,8 +118,36 @@ grid-template-rows: min-content min-content;
     @media screen and (max-width: 1600px) {
 
     }
-      @media screen and (max-width: 1200px) {
+      @media screen and (max-width: 1280px) {
+        .achievements{
+            margin-top: 10%;
+            left: 50%;
+            transform: translate(-50%, -50%); /* Зміщує елемент по центру */
+            width: 90%;
+            grid-template-rows: max-content;
+        }
+    
+        .description p:nth-child(1){
+            display: none;
+        }
+        .description p:nth-child(3){
+            display: none;
+        }
+        .description p:nth-child(2){
+        font-size: 3.3em;
+        letter-spacing: normal;
+        /* text-align:start; */
+        display: block;
 
+        }
+
+        .counter div p:nth-of-type(1){
+            font-size: 4em;
+        }
+        .counter div p:nth-of-type(2){
+            font-weight: 200;
+            font-size: 1.9em;
+        }
       }
         @media screen and (max-width: 768px) {
 
@@ -147,6 +177,7 @@ grid-template-rows: min-content min-content;
             }
             .counter div p:nth-of-type(2){
                 font-weight: 200;
+                font-size: 1em;
             }
         }
     
