--- a/src/components/title_text.css
+++ b/src/components/title_text.css
@@ -26,13 +26,37 @@
 }
 
 @media screen and (min-width: 2000px) {
-
+    .title_text,
+    .title_text2 {
+        font-weight: 800;
+        font-size: 10.5rem;
+        /* width: 100%; */
+        line-height: 0.9;
+    }
+    .title_text{
+        
+    }
+    .title_text2{
+        top: 25%;
+        /* left: 5%; */
+    }
 }
-  @media screen and (max-width: 1600px) {
 
-  }
-    @media screen and (max-width: 1200px) {
-
+    @media screen and (max-width: 1439px) {
+        .title_text,
+        .title_text2 {
+            font-weight: 800;
+            font-size: 8rem;
+            width: 60%;
+            line-height: 0.9;
+        }
+        .title_text{
+            
+        }
+        .title_text2{
+            top: 31%;
+            left: 5%;
+        }
     }
       @media screen and (max-width: 768px) {
         
@@ -40,6 +64,25 @@
 .title_text,
 .title_text2 {
     font-weight: 800;
+    font-size: 6rem;
+    line-height: 0.9;
+}
+.title_text{
+    
+}
+.title_text2{
+    top: 27%;
+    left: 5%;
+}
+     
+}
+      @media screen and (max-width: 480px) {
+        
+        
+.title_text,
+.title_text2 {
+    font-weight: 800;
+    /* width: 50%; */
     font-size: 5rem;
     line-height: 0.9;
 }
@@ -48,6 +91,25 @@
 }
 .title_text2{
     top: 23%;
+    left: 5%;
+}
+     
+      }
+      @media screen and (max-width: 380px) {
+        
+        
+.title_text,
+.title_text2 {
+    /* font-weight: 800;
+    width: 50%; */
+    font-size: 4rem;
+    /* line-height: 0.9; */
+}
+.title_text{
+    
+}
+.title_text2{
+    top: 21%;
     left: 5%;
 }
      
