--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body{
   position: absolute;
   object-fit: cover;
   width: 100%;
-  top: 11%;
+  top: 10%;
   z-index: 2;
 }
 
@@ -33,7 +33,7 @@ body{
     /* width: 100%;  */
     /* transform: scale(1.5) translateX(15%); 
     /* transform-origin: left center;  */
-    top: 10%;
+    /* top: 10%; */
   }
 }
   @media screen and (max-width: 1600px) {
@@ -44,7 +44,7 @@ body{
         width: 100%; /* Адаптивна ширина */
         transform: scale(1.5) translateX(15%); /* Збільшуємо зображення на 150% і зміщуємо */
         /* transform-origin: left center;  */
-        top: 12%;
+        top: 11.5%;
       }
     }
       @media screen and (max-width: 768px) {
@@ -53,11 +53,11 @@ body{
           width: 100%; /* Адаптивна ширина */
           transform: scale(1.5) translateX(15%); /* Збільшуємо зображення на 150% і зміщуємо */
           /* transform-origin: left center;  */
-          top: 12.5%;
+          top: 12%;
 }
 
       }
-      @media screen and (max-width: 450px) {
+      @media screen and (max-width: 500px) {
      
         .news-paper{
           width: 100%; /* Адаптивна ширина */
