--- a/src/components/SectionTwo.css
+++ b/src/components/SectionTwo.css
@@ -1,7 +1,7 @@
 .section_2{
     background-image: 
     linear-gradient(rgba(0, 0, 0, 0.897), rgba(0, 0, 0, 0.766)),
-    url("../background/otherground2.jpg");
+    url("../background/otherground2.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
