--- a/src/components/HoverList.css
+++ b/src/components/HoverList.css
@@ -9,6 +9,7 @@ flex-direction: column;
 width: 100%;
 z-index: 3;
 margin-top: 10%;
+/* padding-bottom: 10%; */
 }
 
 .list div{
@@ -82,6 +83,7 @@ margin-top: 10%;
   .list div:hover .mainTitle {
     padding-left: 2%;
   }
+
 
   @media screen and (min-width: 2000px) {
 
