--- a/src/components/ScrollBox.css
+++ b/src/components/ScrollBox.css
@@ -1,10 +1,9 @@
 .scrollBar{
   width: 100%;
-  /* position: relative; */
   position: relative;
-  /* top: 38%; */
-  /* padding-top: 5%; */
   z-index: 2;
+  transition: all 0.5s ease;
+  transform: translateY();
 }
 
 
@@ -14,7 +13,6 @@
   font-weight: 900;
   font-size: 9vw;
   width: 50%;
-  /* float: right; */
   margin-left: auto;
   margin-right: 10%;
 
@@ -24,8 +22,6 @@
 .wrapper {
   width: 100%;
   position: relative;
-  /* top: 40%;
-  z-index: 5; */
 }
 
 .carousel {
@@ -122,11 +118,11 @@
 
 .slide-button {
   position: absolute;
-  top: 65%;
+  top: 42vw;
   /* height: 50px;
   width: 50px; */
   color: #fff;
-  font-size: 5.2rem;
+  font-size: 3vw;
   cursor: pointer;
   background: transparent;
   border: none;
@@ -135,12 +131,12 @@
 }
 
 #prev-slide {
-  left: 5%;
+  left: 2%;
   z-index: 3;
 }
 
 #next-slide {
-  right: 5%;
+  right: 2%;
   z-index: 3;
 }
 
@@ -165,9 +161,9 @@
     grid-auto-columns: calc(100% / 4); /* Чотири слайда */
   }
   
-  /* .scrollBar{
-    top: 43%;
-  } */
+  .slide-button {
+    top: 40vw;
+  }
 }
 
 @media screen and (max-width: 1600px) {
@@ -175,33 +171,19 @@
   .carousel {
     grid-auto-columns: calc(100% / 3); /* Три повних, четвертий частково */
   }
-  .carousel .card {
-    width: auto;
-  }
-  
-  /* .scrollBar{
-    top: 38%;
-  } */
-/* 
-  .title{
-    font-size: 11vw;
+  /* .slide-button {
+    top: 45vw;
   } */
 }
 
 @media screen and (max-width: 1200px) {
   /* Планшети: показуємо 2 повних слайда, третій частково */
   .carousel {
-    grid-auto-columns: calc(100% / 2); /* Два повних слайда, третій частково */
+    grid-auto-columns: calc(100% / 2,5); /* Два повних слайда, третій частково */
   }
-  
-  /* .scrollBar{
-    top: 38%;
-  } */
-
-  /* .title{
-    font-size: 5em;
-    margin-right: 0%;
-  } */
+  .slide-button {
+    top: 48vw;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -214,14 +196,6 @@
     aspect-ratio: 3/3;
   }
 
-  /* .title{
-    font-size: 5em;
-    margin-right: 20%;
-  } */
-  /* .scrollBar{
-    top: 26%;
-  } */
-
   .subtitle{
     grid-template-columns: none !important;
     grid-template-rows: repeat(2, 1fr);
@@ -232,9 +206,8 @@
   }
 
   .slide-button {
-top: 50%;
-width: auto;
-font-size: 3em;
+top: 62vw;
+font-size: 2.2em;
 }
 
 .card{
@@ -256,6 +229,9 @@ font-size: 3em;
   /* .scrollBar{
     top: 22%;
   } */
+  .slide-button {
+    top: 62vw;
+  }
 
   .subtitle{
     grid-template-columns: none !important;
