--- a/src/components/ScrollBox.css
+++ b/src/components/ScrollBox.css
@@ -13,8 +13,8 @@
   font-weight: 900;
   font-size: 9vw;
   width: 50%;
-  margin-left: auto;
-  margin-right: 10%;
+  margin-left: 40vw;
+  /* margin-right: 10%; */
 
 }
 
@@ -63,13 +63,15 @@
   display: grid;
   grid-template-rows: repeat(3, min-content);
   gap: 3%;
-  padding: 0 0 10% 0;
+  padding: 0 0 15% 0;
   cursor: pointer;
+  outline: none;
 }
 
 .card .badge {
   font-weight: 100;
-  font-size: 2.5rem;
+  /* font-size: 2.5rem; */
+  font-size: 2.1vw;
   font-family: "Georama", "Times New Roman", Times, serif;
     margin: 0;
   transition: font-size 0.3s ease, font-weight 0.3s ease;
@@ -91,6 +93,8 @@
   opacity: 0; /* Стартове значення для opacity */
   transform: translateY(-10px); /* Для анімації руху */
   transition: opacity 0.5s ease, transform 0.5s ease; /* Додаємо плавний перехід */
+  /* display: none; */
+
 }
 
 .card:hover .subtitle,
@@ -99,6 +103,7 @@
   opacity: 1; /* Фінальне значення для opacity */
   transform: translateY(0); /* Фінальне положення */
   animation: fadeIn 0.5s ease; /* Застосовуємо анімацію */
+  /* display: block; */
 }
 
 .card:focus .badge {
@@ -171,6 +176,8 @@
   .carousel {
     grid-auto-columns: calc(100% / 3); /* Три повних, четвертий частково */
   }
+
+  
   /* .slide-button {
     top: 45vw;
   } */
@@ -184,13 +191,25 @@
   .slide-button {
     top: 48vw;
   }
+  .subtitle{
+    grid-template-columns: none !important;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .subtitle p{
+    /* font-size: 1.4em; */
+    text-align: justify;
+  }
+  .card .badge {
+    font-size: 2.3vw;
+  }
 }
 
 @media screen and (max-width: 768px) {
   /* Телефони: показуємо 2 повних слайда */
   .carousel {
-    grid-auto-columns: calc(100% / 1.35); /* Два повних слайда */
-    margin-right: 5%;
+    grid-auto-columns: calc(100% / 1.5); /* Два повних слайда */
+    margin-right: 3%;
+    margin-left: 0;
   }
   .card .img img {
     aspect-ratio: 3/3;
@@ -201,7 +220,8 @@
     grid-template-rows: repeat(2, 1fr);
   }
   .subtitle p{
-    font-size: 1.4em;
+    /* font-size: 1.4em; */
+    font-size: 3vw;
     text-align: justify;
   }
 
@@ -210,25 +230,23 @@ top: 62vw;
 font-size: 2.2em;
 }
 
+.card .badge {
+  font-size: 5vw;
+}
 .card{
+  /* margin-left: 0; */
   scroll-snap-align: end !important;
 }
 }
 
 @media screen and (max-width: 450px) {
   .carousel {
-    grid-auto-columns: calc(100% / 1.35); /* Два повних слайда */
+    grid-auto-columns: calc(100% / 1.4); /* Два повних слайда */
   }
   .card .img img {
     aspect-ratio: 3/3;
   }
 
-  /* .title{
-    font-size: 3.5em;
-  } */
-  /* .scrollBar{
-    top: 22%;
-  } */
   .slide-button {
     top: 62vw;
   }
@@ -239,13 +257,10 @@ font-size: 2.2em;
   }
   .subtitle p{
     font-size: 1em;
+    font-size: 3.5vw;
     text-align: justify;
     font-weight: 100;
   }
-
-.badge{
-  font-size: 1.5em !important;
-}
 
 }
 
