--- a/src/components/Lighter.css
+++ b/src/components/Lighter.css
@@ -3,7 +3,7 @@
     width: 100%;
     position: relative;
     z-index: 2;
-    /* margin-top: 10%; */
+    margin-top: -12%;
     /* top: 11%; */
     box-sizing: border-box;
 
