--- a/src/components/HoverList.css
+++ b/src/components/HoverList.css
@@ -1,15 +1,11 @@
 .list{
 display: flex;
 position: relative;
-/* margin: 0 5%; */
-/* padding-top: 5%; */
-/* position: relative; */
-/* top: 24%; */
 flex-direction: column;
 width: 100%;
-z-index: 3;
+/* z-index: 3; */
 margin-top: 10%;
-/* padding-bottom: 10%; */
+
 }
 
 .list div{
@@ -27,7 +23,6 @@ margin-top: 10%;
 
 
 .list img{
-    /* height: auto; */
     aspect-ratio: 4/3;
     position: absolute;
     width: 351px;
@@ -66,7 +61,6 @@ margin-top: 10%;
   }
   .list div:hover .mainTitle, .list div:hover p {
     font-weight: 700;
-    /* font-size: 2.1vw; */
   }
   .hover-list div:hover .img-list {
     display: inline-block;
@@ -139,11 +133,6 @@ margin-top: 10%;
         }
         @media screen and (max-width: 650px) {
          
-
-          /* .list div{
-            grid-template-columns: 1fr 75%;
-          } */
-
           .list p {
             font-weight: 100;
             font-size: 1.2em;
