--- a/src/components/ScrollBox.css
+++ b/src/components/ScrollBox.css
@@ -1,7 +1,7 @@
 .scrollBar{
   width: 100%;
   position: relative;
-  z-index: 2;
+  /* z-index: 2; */
   transition: all 0.5s ease;
   transform: translateY();
 }
@@ -13,7 +13,7 @@
   font-weight: 900;
   font-size: 9vw;
   width: 50%;
-  margin-left: 40vw;
+  margin-left: 37vw;
   /* margin-right: 10%; */
 
 }
@@ -29,7 +29,7 @@
   grid-auto-flow: column;
   gap: 5%;
   grid-auto-columns: calc(100% / 3);
-  margin-left: 5%;
+  /* margin-left: 5%; */
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
@@ -78,10 +78,12 @@
 }
 
 .subtitle p {
-  font-size: 1rem;
+  /* font-size: 1rem; */
+  font-size: 0.8vw;
   font-weight: 200;
   margin: 0;
   font-family: "Montserrat", sans-serif;
+  display: none;
 }
 
 .card .subtitle {
@@ -93,8 +95,6 @@
   opacity: 0; /* Стартове значення для opacity */
   transform: translateY(-10px); /* Для анімації руху */
   transition: opacity 0.5s ease, transform 0.5s ease; /* Додаємо плавний перехід */
-  /* display: none; */
-
 }
 
 .card:hover .subtitle,
@@ -103,7 +103,11 @@
   opacity: 1; /* Фінальне значення для opacity */
   transform: translateY(0); /* Фінальне положення */
   animation: fadeIn 0.5s ease; /* Застосовуємо анімацію */
-  /* display: block; */
+}
+
+.card:hover .subtitle p,
+.card:focus .subtitle p {
+display: block;
 }
 
 .card:focus .badge {
@@ -146,7 +150,8 @@
 }
 
 .slide-button:hover {
-  color: #f44c06;
+  /* color: #f44c06; */
+  color: gray;
 }
 
 .carousel.dragging {
@@ -161,14 +166,13 @@
 }
 
 @media screen and (min-width: 2000px) {
-  /* На екранах 2K і більше: показуємо 4 повних слайда */
-  .carousel {
-    grid-auto-columns: calc(100% / 4); /* Чотири слайда */
-  }
+  /* .carousel {
+    grid-auto-columns: calc(100% / 4);
+  } */
   
-  .slide-button {
+  /* .slide-button {
     top: 40vw;
-  }
+  } */
 }
 
 @media screen and (max-width: 1600px) {
@@ -196,8 +200,8 @@
     grid-template-rows: repeat(2, 1fr);
   }
   .subtitle p{
-    /* font-size: 1.4em; */
-    text-align: justify;
+    font-size: 1.2vw;
+    text-align: left;
   }
   .card .badge {
     font-size: 2.3vw;
@@ -222,7 +226,7 @@
   .subtitle p{
     /* font-size: 1.4em; */
     font-size: 3vw;
-    text-align: justify;
+    /* text-align: justify; */
   }
 
   .slide-button {
@@ -257,8 +261,8 @@ font-size: 2.2em;
   }
   .subtitle p{
     font-size: 1em;
-    font-size: 3.5vw;
-    text-align: justify;
+    font-size: 3.3vw;
+    /* text-align: justify; */
     font-weight: 100;
   }
 
