--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,28 +1,78 @@
 .header {
     height: 78px;
+    position: fixed;
+    z-index: 5;
     display: flex;
     width: 100%;
     align-items: end;
     justify-content: space-between;
-    padding: 0 5%;
-    /* position: fixed; */
 }
 .logo-luce {
-    width: 126px;
-    height: 50px;
+    width: min-content;
+    height: min-content;
     cursor: pointer;
     position: relative;
+    padding-left: 5%;
+
 
 }
 .logo-luce img {
     width: 126px;
     height: 50px;
-    position: absolute;
+}
 
+.off-screen-menu a{
+    text-decoration: none;
+    color: white;
+    /* text-align: justify; */
+    /* width: 50%; */
+}
+.off-screen-menu{
+    background-color: rgb(26, 26, 26);
+    height: 100vh;
+    width: 100%;
+    max-width: 65%;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    display: flex;
+    gap: 2%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-style: 3rem;
+    transition: .3s ease;
+    z-index: 5;
+    overflow: hidden;
+}
+
+.off-screen-menu.active{
+    right: 0 !important;
+}
+
+.off-screen-menu a:hover{
+    color: #F44C06;
+}
+
+.burger{
+    display: none;
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 35px;
+    cursor: pointer;
+    z-index: 6;
+    padding-right: 5%;
+}
+
+.burger:hover{
+    color: gray;
 }
 
 .navigation {
     margin: 0;
+    padding-right: 5%;
     right: 70px;
 }
 
@@ -50,11 +100,33 @@
 
     }
       @media screen and (max-width: 768px) {
+        .header{
+            align-items: center;
+        }
         .logo-luce img {
             width: 100px;
             height: auto;
-            position: absolute;
         
+        }
+        .burger{
+            display: block;
+        }
+        .navigation{
+            display: none;
+           }
+      }
+      @media screen and (max-width: 480px) {
+        
+        .header{
+            padding-top: 5%;
+            height: max-content;
+        }
+     
+
+        .logo-luce img {
+
+            width: 20vw;
+            height: auto;
         }
       }
   
